(Jeroen Ruigrok)
- SF patch #1549758 Make sure cleanup() doesn't fail with NullPointerException

(Flavio Botelho)
- SF patch #1529326 Bug in new code at QueryArgs with fixed typo in jsp/search/advanced.jsp

(Michael Judd)
- SF patch #1528040  Fixes minor bug in Harvest.java for Oracle users

(Stuart Lewis)
- SF patch #1543856 Statistics do not work in 1.4 - patch to fix SF bug #1543853
- SF patch #1541383 Browse-by-date and browse-by-title not working
- SF patch #1548020 robots.txt to limit bots navigating browse by subject

(Mark Diggory)
- SF patch #1523824 robots.txt to limit bots navigating author and date pages
- SF patch #1547987 Small Messages.properties modification (change of DSpace copyright text)

(Tim Donohue)
- SF patch #1550606  more configurable RSS feeds, also moves text to Messages.properties
- SF patch #1544829  fixes SF bug #1544807 Browse-by-Subject/Author paging mechanism broken
- SF patch #1543969  fixes SF bug #1543966 "Special" groups inside groups bug

(Jonathan Champ)
- SF patch #1544089 fixes SF bug #1515148 community policies not deleting correctly

(Scott Yeadon)
- Fixed typo in 13-14 upgrade docs and checksum checker sql, and removed tasklist sql

(Claudia Juergen)
- SF patch #1514965 fixes SF bug #1505422. fix typo in SQL for item mapper
- SF patch #1516988  Deleting owner of mapped items SF bug #1196724
- SF patch #1517488  Access Bitstreams in Withdrawn Items SF bug #1408373

(Richard Jones)
- SF bug #1515075. minor build file fix to copy correct config file

1.4 beta 1
==========
(Scott Phillips)
- Rework of DB code to use prepared statements for improved security and performance

(Lieven Droogmans, Ben Bosman)
- SF Patch #1468197 - Filter out mapped items from browse list, fixes bug #1455674 and addresses a symptom of bug #1456553

(Richard Jones)
- SF Patch #1458315 - Customisable Browse Index, fixes bug #1456227

(Robert Tansley)
- UNIQUE constraint applied to schema namespace + short_id (not element).
  Fixed bug SF #1460515.
